--- a/api/package.json
+++ b/api/package.json
@@ -20,7 +20,8 @@
     "joi": "^17.6.0",
     "mysql2": "^2.3.3",
     "redis": "^4.0.4",
-    "sequelize": "^6.17.0",
+    "sequelize": "^6.18.0",
+    "typescript": "^4.6.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
