--- a/api/package.json
+++ b/api/package.json
@@ -18,7 +18,9 @@
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.3",
     "redis": "^4.0.4",
     "sequelize": "^6.18.0",
     "typescript": "^4.6.3",
