--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.29.1",
     "connect-redis": "^6.1.2",
     "connect-session-sequelize": "^7.1.2",
     "cookie-parser": "^1.4.6",
@@ -19,6 +20,7 @@
     "express-session": "^1.17.2",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.3",
     "redis": "^4.0.4",
